test/semantic_errors/invalid_assignment14.mc
void foo() {
    
}

void main() {
    int a;
    a = foo(); /* cannot assign void to int */
}